// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons/Docs custom source 1`] = `
<h1>
  Custom source
</h1>
`;

exports[`Storyshots Addons/Docs function 1`] = `
<button>
  Hello Button
</button>
`;

exports[`Storyshots Addons/Docs heading 1`] = `
<h1>
  Hello World
</h1>
`;

exports[`Storyshots Addons/Docs standard source 1`] = `
<h1>
  Standard source
</h1>
`;

exports[`Storyshots Addons/Docs transformed source 1`] = `
<h1>
  Some source
</h1>
`;
